# wasm-rust-algorithms

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: binary_search.rs  lib.rs  quicksort.rs  temperature.rs
