[package]
name = "rust-algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
jemallocator = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
crate-type = ["cdylib"]